# c-s-4023-project-2

.git copy/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git copy/logs/: HEAD
.git copy/logs/refs/remotes/origin/: HEAD  main
.git copy/objects/pack/: pack-0eabade3c19065502feb3afe4776326cc5c706f1.idx  pack-0eabade3c19065502feb3afe4776326cc5c706f1.pack  pack-0eabade3c19065502feb3afe4776326cc5c706f1.rev
.git copy/refs/remotes/origin/: main
project2/: CMakeLists.txt  package.xml
project2/launch/: tb4_sim_launch.py
project2_control/: CMakeLists.txt  package.xml
project2_control/src/: main.cpp  robot_controller.cpp  robot_controller.hpp
